--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
+lib/turkish_dictionary.dart
 
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
