--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sozluk
-description: Sozluk is a community-driven Turkish dictionary powered by Türk Dil Kurumu.
-version: 1.0.2
+description: Sozluk is a community-driven Turkish dictionary powered by Turkish Language Association.
+version: 1.0.3
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
