--- a/example/sozlukdeneme/pubspec.yaml
+++ b/example/sozlukdeneme/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sozluk: any
+  sozluk: ^2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
